[gd_scene load_steps=17 format=3 uid="uid://b66bum14lrhmo"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_gcrc1"]
[ext_resource type="Texture2D" uid="uid://bmlmycvri7yf6" path="res://Shadows/playershadow.png" id="2_mnc1v"]
[ext_resource type="Texture2D" uid="uid://dpqutujrqox4i" path="res://Player/cowboy.png" id="2_xog45"]
[ext_resource type="PackedScene" uid="uid://bj46awucssf32" path="res://Interactions/hitbox.tscn" id="4_qpdk4"]
[ext_resource type="Script" path="res://Player/interact_area.gd" id="5_hv8ie"]
[ext_resource type="PackedScene" uid="uid://dy6qvrqmpgbv3" path="res://Interactions/health_component.tscn" id="6_6b7mg"]
[ext_resource type="Script" path="res://Player/player_inventory.gd" id="7_pj102"]
[ext_resource type="PackedScene" uid="uid://tftv46acpqiv" path="res://Effects/mob_light.tscn" id="8_nvx23"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mv80b"]
radius = 2.0
height = 8.0

[sub_resource type="Animation" id="Animation_ig82i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_75otw"]
resource_name = "move"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.122173, -0.122173, 0.122173]
}

[sub_resource type="Animation" id="Animation_3ac3p"]
resource_name = "move_up"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.122173, -0.122173, 0.122173]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lo2yw"]
_data = {
"RESET": SubResource("Animation_ig82i"),
"move": SubResource("Animation_75otw"),
"move_up": SubResource("Animation_3ac3p")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f7vy0"]
radius = 3.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nyadd"]
radius = 15.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_g1y8a"]
polygon = PackedVector2Array(-3, 7, 2, 7, 2, 6, -3, 6)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
collision_mask = 2
script = ExtResource("1_gcrc1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mv80b")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 2
texture = ExtResource("2_xog45")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lo2yw")
}

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="Hand" type="Marker2D" parent="."]

[node name="PlayerShadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-1, 2)
texture = ExtResource("2_mnc1v")

[node name="Hitbox" parent="." node_paths=PackedStringArray("health_component") groups=["Player"] instance=ExtResource("4_qpdk4")]
visible = true
collision_layer = 41
collision_mask = 2
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CapsuleShape2D_f7vy0")

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2
script = ExtResource("5_hv8ie")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("CircleShape2D_nyadd")

[node name="HealthComponent" parent="." instance=ExtResource("6_6b7mg")]
MAX_HEALTH = 200.0

[node name="PlayerInventory" type="Node2D" parent="."]
script = ExtResource("7_pj102")

[node name="LassoTimer" type="Timer" parent="."]
one_shot = true

[node name="MobLight" parent="." instance=ExtResource("8_nvx23")]
visible = true
position = Vector2(-1, 0)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_g1y8a")

[connection signal="area_entered" from="InteractArea" to="InteractArea" method="_on_area_entered"]
[connection signal="area_exited" from="InteractArea" to="InteractArea" method="_on_area_exited"]
[connection signal="timeout" from="LassoTimer" to="." method="_on_lasso_timer_timeout"]

[editable path="Hitbox"]
